Desktop Laning page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <title>Frontend Mentor | Meet landing page</title>
   </head>
   <body>
+    <!-- header -->
     <header>
       <img src="assets/logo.svg" alt="logo" />
     </header>
+
+    <!-- groupchat -->
     <section class="groupchat">
       <div class="groupchat_img">
         <img src="assets/avatars/person1.jpg" alt="person1" />
@@ -47,11 +50,13 @@
       </div>
     </section>
 
+    <!-- number 1 section -->
     <section class="number1-section">
       <div class="line"></div>
       <button class="button-number">01</button>
     </section>
 
+    <!-- image container -->
     <section class="mid-images">
       <img
         class="mid-img"
@@ -75,6 +80,7 @@
       />
     </section>
 
+    <!-- text container -->
     <section class="container">
       <h3>Built for modern use</h3>
       <h2>Smarter meetings, all in one place</h2>
@@ -85,8 +91,24 @@
       </p>
     </section>
 
+    <!-- number 2` section -->
+    <section class="number2-section">
+      <div class="line"></div>
+      <button class="button-number">02</button>
+    </section>
+
+    <!-- footer -->
     <footer>
-      <button class="btn3">Download v1.3</button>
+      <div class="footer-container">
+        <div class="footer-experience">Experience more together</div>
+        <div class="footer-stay-connected">
+          Stay connected with reliable HD meetings and unlimited one-on-one and
+          group video sessions.
+        </div>
+        <button class="footer-button-download" id="footer-button-download">
+          Download <span>v1.3</span>
+        </button>
+      </div>
     </footer>
   </body>
 </html>
