Desktop Laning page

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           Stay connected with reliable HD meetings and unlimited one-on-one and
           group video sessions.
         </div>
-        <button class="footer-button-download" id="footer-button-download">
+        <button class="footer-button-download">
           Download <span>v1.3</span>
         </button>
       </div>
