Tablet landing page

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <!-- groupchat -->
     <section class="groupchat">
       <div class="groupchat_img">
-        <img src="assets/avatars/person1.jpg" alt="person1" />
-        <img class="mid" src="assets/avatars/person2.jpg" alt="person2" />
-        <img src="assets/avatars/person3.jpg" alt="person3" />
-        <img src="assets/avatars/person4.jpg" alt="person4" />
-        <img class="mid" src="assets/avatars/person5.jpg" alt="person5" />
-        <img src="assets/avatars/person6.jpg" alt="person6" />
+        <img class="left-1" src="assets/avatars/person1.jpg" alt="person1" />
+        <img class="left-2" src="assets/avatars/person2.jpg" alt="person2" />
+        <img class="left-3" src="assets/avatars/person3.jpg" alt="person3" />
+        <img class="left-4" src="assets/avatars/person4.jpg" alt="person4" />
+        <img class="left-5" src="assets/avatars/person5.jpg" alt="person5" />
+        <img class="left-6" src="assets/avatars/person6.jpg" alt="person6" />
       </div>
       <div class="groupchat_text">
         <h1>Group Chat For Everyone</h1>
@@ -40,13 +40,13 @@
           <button class="btn2">What is it?</button>
         </div>
       </div>
-      <div class="groupchat_img">
-        <img src="assets/avatars/person7.jpg" alt="person7" />
-        <img class="mid-2" src="assets/avatars/person8.jpg" alt="person8" />
-        <img src="assets/avatars/person9.jpg" alt="person9" />
-        <img src="assets/avatars/person10.jpg" alt="person10" />
-        <img class="mid-2" src="assets/avatars/person11.jpg" alt="person11" />
-        <img src="assets/avatars/person12.jpg" alt="person12" />
+      <div class="groupchat_img-2">
+        <img class="right-1" src="assets/avatars/person7.jpg" alt="person7" />
+        <img class="right-2" src="assets/avatars/person8.jpg" alt="person8" />
+        <img class="right-3" src="assets/avatars/person9.jpg" alt="person9" />
+        <img class="right-4" src="assets/avatars/person10.jpg" alt="person10" />
+        <img class="right-5" src="assets/avatars/person11.jpg" alt="person11" />
+        <img class="right-6" src="assets/avatars/person12.jpg" alt="person12" />
       </div>
     </section>
 
