--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- number 1 section -->
     <section class="number1-section">
       <div class="line"></div>
-      <button class="button-number">01</button>
+      <button class="button-number"><a href="#top">01</a></button>
     </section>
 
     <!-- image container -->
@@ -95,7 +95,7 @@
     <!-- number 2` section -->
     <section class="number2-section">
       <div class="line"></div>
-      <button class="button-number">02</button>
+      <button class="button-number"><a href="#top">02</a></button>
     </section>
 
     <!-- footer -->
